<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog"
    android:paddingVertical="60dp"
    tools:context=".auth.dialog.AuthDialog">

    <TextView
        android:id="@+id/tv_login_title"
        style="@style/TextTitle.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_hello"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_desc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/text_desc_login"
        style="@style/TextDesc.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <LinearLayout
        android:id="@+id/ll_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="80dp"
        android:orientation="horizontal"
        android:padding="12dp"
        style="@style/ButtonMilefWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_desc" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_google"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="start"
            android:textColor="@color/yellow_melif"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/text_login_with_google"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>